tests/baselines/reference/parser579071.errors.txt
parser579071.ts(1,14): error TS1005: ')' expected.


==== parser579071.ts (1 errors) ====
    var x = /fo(o/;
                 
!!! error TS1005: ')' expected.